# ryzenControllerLinux

./: .gitignore  README.md  meson.build  plugin_interface.h  ryzen_plugin.cpp  ryzen_plugin.h
backend/: config.cpp  config.h  ryzen_adj_wrapper.cpp  ryzen_adj_wrapper.h
ui/: ryzen_page.cpp  ryzen_page.h
